# ConflictFreeScheduling

./: .env.example  .gitignore  CHANGELOG.md  CITATION.md  CMakeLists.txt  COMPREHENSIVE_TEST_REPORT.md  COURSE_BATCH_VERIFICATION_REPORT.md  CSV_FORMAT_GUIDE.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FINAL_v2.md  DEPLOYMENT_SUMMARY.md  ENHANCED_GENERATOR.md  FINAL_DEPLOYMENT_REPORT.md  FINAL_DEPLOYMENT_VALIDATION.md  FINAL_PROJECT_STATUS.md  FINAL_TESTING_SUMMARY.md  GITHUB_DEPLOYMENT_FINAL.md  GITHUB_DEPLOYMENT_SUCCESS.md  GITHUB_DEPLOYMENT_SUCCESS_v2.md  GIT_REPOSITORY_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PDF_DOWNLOAD_GUIDE.md  PDF_GENERATION_SUCCESS.md  PDF_SUCCESS_SUMMARY.md  PROJECT_COMPLETION_FINAL.md  PROJECT_DOCUMENTATION.md  PROJECT_ENHANCEMENT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SIMPLE_INPUT_TO_PDF_SUMMARY.md  SOLUTION_SUMMARY.md  TESTING_REPORT.md  TEST_REPORT.md  USER_GUIDE.md  backtracking.html  debug_test.py  demo.py  (+29 more)
data/: batches.csv  comprehensive_courses.csv  comprehensive_routine_data.json  courses_with_teachers.csv  cse_courses.csv  database.conf  documentation_draft.txt  faculty_data.json  faculty_input_test.json  minimal_sample.sql  minimal_sample_fixed.sql  reference_based_routine_data.json  rooms.csv  routine_data.txt  sample_courses.csv  sample_courses.json  sample_courses.txt  sample_data.sql  sample_data_backup.sql  sample_data_fixed.sql  sample_routine_data.json  scheduling.db  schema.sql  simple_schedule.txt  teachers.csv  test_faculty_data.json  test_sample.sql  test_schedule.csv  time_slots.csv  updated_sample_data.sql
docs/: ALGORITHMS.md  API.md  CONTRIBUTING.md  DATA_FORMAT.md  DEPLOYMENT.md  EXAMPLES.md  INSTALLATION.md  PERFORMANCE.md  TESTING.md
examples/: database_example.cpp  database_example.py
output/: Debug Test Schedule  academic_schedule_BCSE24_A.html  academic_schedule_comprehensive_routine.html  enhanced_schedule_comprehensive_routine.html  updated_stats_test
scripts/: html_to_pdf.sh  init_database.sh  initialize_database.py  run_enhanced_generator.sh  setup_environment.py
src/: __init__.py  activity.py  main.cpp  scheduler.cpp  scheduler.h  scheduler.py
src/algorithms/: __init__.py  algorithm_performance.h  backtracking.cpp  backtracking.h  backtracking.py  branch_and_bound.cpp  branch_and_bound.h  dynamic_programming.cpp  dynamic_programming.h  dynamic_programming.py  dynamic_programming_clean.cpp  dynamic_programming_clean.h  enhanced_routine_generator.cpp  enhanced_routine_generator.h  enhanced_routine_generator.py  genetic_algorithm.cpp  genetic_algorithm.h  genetic_algorithm.py  graph_coloring.cpp  graph_coloring.h  graph_coloring.py  greedy.cpp  greedy.h
src/database/: __init__.py  database_manager.cpp  database_manager.h  database_manager.py  db_utils.h
src/utils/: __init__.py  (+17 more)
tests/: test_main.cpp  test_scheduler.py
(+2 files in other folders)
